# microlith-cpp

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Doxyfile.in  README.md  conanfile.py
.devcontainer/: devcontainer.json
cmake/: conan-util.cmake  meta.cmake
docs/: Makefile
docs/source/: Doxyfile.in  conf.py  index.rst  installation_and_usage.rst  introduction.rst
include/microlith/: executable_interface.h  in_process_service_discoverer.h  service_executor.h  services.h
include/microlith/detail/: log.h  macros.h
src/: abstract_service.cpp  executable_interface.cpp  in_process_service_discoverer.cpp  service_executor.cpp
test/: CMakeLists.txt  services-test.cpp  test-in_process_service_discoverer.cpp  test-service_executor.cpp
